--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"url": "http://127.0.0.1:4270/poll_status",
+	"url": "https://nwvlc-server.herokuapp.com/poll_status",
 	"media_name": "ex_media_name",
 	"uname": "srinu427",
 	"nwpoll_interval_ms": 1000
